@@ -1,3 +1,2 @@
 conductiveInternal
-stuck
-notDamaged
+noAutoRevert
